# tux

./: .gitignore  LICENSE  README.md  tux.cabal
example/: .tux.json  .tux.yml
example/nested/: .tux.json  .tux.yml
src/: Config.hs  Main.hs  main.hs
src/System/: Tmux.hs
src/System/Tmux/: Parse.hs
