-- Tools for a tmux workflow.

name:                tux
version:             0.1.0.0
synopsis:            Tools for a tmux workflow.
-- description:
license:             MIT
license-file:        LICENSE
author:              Matt Neary
maintainer:          neary.matt@gmail.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >=1.8


executable Tux
  main-is:             Main.hs
  hs-source-dirs:      src
  -- other-modules:
  build-depends:       base ==4.8.*,
                       turtle ==1.2.*,
                       text ==1.2.*,
                       parsec ==3.1.*
